--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.15.1
 Jinja2==2.10.3
+joblib==0.14.0
 jsonschema==3.1.1
 jupyter==1.0.0
 jupyter-client==5.3.4
@@ -26,10 +27,12 @@ nbconvert==5.6.1
 nbformat==4.4.0
 notebook==6.0.1
 numpy==1.17.3
+pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
@@ -37,10 +40,14 @@ Pygments==2.4.2
 pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
+pytz==2019.3
 pyzmq==18.1.0
 qtconsole==4.5.5
+scikit-learn==0.21.3
+scipy==1.3.2
 Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
